Fixed padding issue and extra space on bottom of card

--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -90,7 +90,7 @@ h1 {
 
 .content-section img {
   width: 290px;
-  padding: 15px 15px 0 15px;
+  padding: 15px;
 }
 
 .content-section p {
@@ -361,7 +361,15 @@ h1 {
     transition: all 0.5s ease-in-out;
 }
 
+.fake-footer {
+  width: 44px;
+  height: 44px;
+  background: transparent;
+}
+
 .card-footer {
+  position: absolute;
+  bottom: 0px;
   border-top: 1px solid #eeeeee;
   font-family: FuturaLT-Book, Helvetica, sans-serif;
   width: 280px;
@@ -391,4 +399,15 @@ h1 {
 
 .card-footer .paging {
   float: right;
+}
+
+.card-fader {
+  z-index: 1000;
+  background-color: #FFFFFF;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  min-height: 460px;
 }
